--- a/3d-effect/css/main.css
+++ b/3d-effect/css/main.css
@@ -62,6 +62,8 @@ body {
 h1, h2, h3, h4 {
 	font-weight: 100;
 	text-transform: uppercase;
+	line-height: 1;
+	width: min-content;
 }
 
 .frame h2 {
@@ -87,4 +89,49 @@ h1, h2, h3, h4 {
 
 .frame_bg {
 	background-color: rgb(0 0 0 / .87)
+}
+
+video.frame-media {
+	width: calc(var(--index) * var(--side-big));
+	height: calc(var(--index) * var(--side-small));
+}
+
+video.frame-media_right {
+	left: calc(var(--side-big) / 2 * var(--index) + var(--gutter));
+}
+
+video.frame-media_left {
+	right: calc(var(--side-big) / 2 * var(--index) + var(--gutter));
+}
+
+.text-right>* {
+	position: relative;
+	left: 18vw;
+}
+
+.text-left>* {
+	position: relative;
+	right: 18vw;
+}
+
+.frame h3 {
+	font-size: calc(var(--index) * 3);
+}
+
+.frame p {
+	max-width: 30vw;
+	margin-top: 5vh;
+}
+
+.soundbutton {
+	position: fixed;
+	bottom: 5vh;
+	right: 5vw;
+	cursor: pointer;
+	width: 24px;
+	transition: .25s ease;
+}
+
+.soundbutton.paused {
+	opacity: .25;
 }
